test/typeerrors/ex20.golden
Building file ../test/typeerrors/ex20.act
  Compiling ex20.act for release

ERROR: Error when compiling ex20 module: Type error

  |
1 |f : (str,str) -> str
  |^

  |
3 |def f(s : str, a):
4 |    return s * a
  |
Type incompatibility between signature for and definition of f
f is inferred to have a type of the form _(s: __builtin__.str, a: __builtin__.int) -> __builtin__.str

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

